fixed form zoom on mobile

--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -2,6 +2,10 @@
 
 /* ------ Misc (App-wide) ------ */
 
+.form-control {
+  font-size: 16px;
+}
+
 .container-fluid {
   min-height: 100vh;
 }
